AM_CXXFLAGS=-I$(top_srcdir)/src/thread_pool -I$(top_srcdir)/src/tcp_server
noinst_LTLIBRARIES = libhttpserver.la
libhttpserver_la_SOURCES=http_packet.cpp  http_server.cpp http_connection.cpp
rptdir=$(includedir)/rpt
rpt_HEADERS= http_packet.h  http_server.h http_connection.h  http_request.h http_response.h http_servlet.h  http_servlet_request.h  http_servlet_response.h
