AM_CXXFLAGS=-I$(top_srcdir)/src/thread_pool
noinst_LTLIBRARIES = libtcpserver.la
libtcpserver_la_SOURCES=epoll_reactor.cpp  tcp_connection.cpp  tcp_socket.cpp 
rptdir=$(includedir)/rpt
rpt_HEADERS= acceptor_base.h client.h epoll_reactor.h server_socket.h socket_factory.h tcp_connection.h tcp_socket.h buffered_client_iostream.h client_iostream.h fdbase.h socket_base.h socket.h tcp_socket_factory.h  utils.h
